Viewport/EEVEE: Alpha socket connection/disconnection does not cause an update to the image texture node. #96278

Closed
opened 2022-03-09 22:18:28 +01:00 by Ethan-Hall · 8 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: ?

Short description of error
The connection status of the alpha socket fails to update the how the image texture node's alpha is handled until the image texture node receives an update from another source, such as changing the node's interpolation mode.

Example
No update on connection change.mp4

Test File
Alpha_Image_Test_EEVEE_3.1.0.blend

Test Image
Image With Alpha copy.png

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.79 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: ? **Short description of error** The connection status of the alpha socket fails to update the how the image texture node's alpha is handled until the image texture node receives an update from another source, such as changing the node's interpolation mode. **Example** [No update on connection change.mp4](https://archive.blender.org/developer/F12915033/No_update_on_connection_change.mp4) **Test File** [Alpha_Image_Test_EEVEE_3.1.0.blend](https://archive.blender.org/developer/F12918701/Alpha_Image_Test_EEVEE_3.1.0.blend) **Test Image** ![Image With Alpha copy.png](https://archive.blender.org/developer/F12918703/Image_With_Alpha_copy.png)
Author

Added subscriber: @Ethan-Hall

Added subscriber: @Ethan-Hall
Member

Added subscribers: @JacquesLucke, @PratikPB2123

Added subscribers: @JacquesLucke, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Missing texture update after connecting alpha socket was broken by 7e712b2d6a
Removing the connection don't update textures- is a quite long standing issue which I can reproduce on previous versions (2.83)
@JacquesLucke, can you check?

Also, @Ethan-Hall can you upload the image you are using?

Missing texture update after connecting alpha socket was broken by 7e712b2d6a `Removing the connection don't update textures`- is a quite long standing issue which I can reproduce on previous versions (2.83) @JacquesLucke, can you check? Also, @Ethan-Hall can you upload the image you are using?

Added subscriber: @tempdevnova

Added subscriber: @tempdevnova

I'm pretty sure it's also related to https://developer.blender.org/T95671

I'm pretty sure it's also related to https://developer.blender.org/T95671

This issue was referenced by 7509a74116

This issue was referenced by 7509a741166c97f5f87ed9e580eef6f99eb1e62a
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2022-03-18 10:50:36 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96278
No description provided.