Fix T96278: missing update after alpha socket connection

Differential Revision: https://developer.blender.org/D14299